bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value fini
while (fini)
       ^BDR:3: error: not found: value litmessage
if (litmessage()== "R" )
    ^BDR:6: error: not found: value litmessage
else if (litmessage()== "L")
         ^BDR:9: error: not found: value litmessage
else if (litmessage()== "I")
         ^BDR:13: error: not found: value litmessage
else if (litmessage()== "I")
         ^BDR:17: error: not found: value litmessage
else if (litmessage()== "A")
         ^BDR:19: error: not found: value litmessage
else if (litmessage()== "B")
         ^BDR:22: error: not found: value litmessage
else if (litmessage()== "C")
         ^BDR:26: error: not found: value litmessage
else if (litmessage()== "Z")
         ^BDR:28: error: not found: value litmessage
else if (litmessage()== "Y")
         ^BDR:31: error: not found: value litmessage
else if (litmessage()== "X")
         ^BDR:36: error: not found: value fini
  fini=1
  ^