bdr.BDR.scala.code
while (fini)
{
if (litmessage()== "R" )
		{right();
 		forward();}
else if (litmessage()== "L")
		{left();
 		forward();}
else if (litmessage()== "I")
		{left();
		left();
 		forward();}
else if (litmessage()== "I")
		{left();
		left();
 		forward();}
else if (litmessage()== "A")
		{forward();}
else if (litmessage()== "B")
		{forward();
 		forward();}
else if (litmessage()== "C")
		{forward();
 		forward(); 
    forward();}
else if (litmessage()== "Z")
		{backward();}
else if (litmessage()== "Y")
		{backward();
 		backward();}
else if (litmessage()== "X")
		{backward();
 		backward();
    backward();}
else
  fini=1
}